--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>Joseph Yoon</h1>
-        <p>Hello World</p>
+        <p>Hello</p>
         <img src="image.jpg" width="400" height="300">
         <button onClick="button()">Button</button>
     </body>
