--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="app.css"/>
+        <title>joseph yoon</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
     </head>
 
     <body>
-        <h1>Joseph Yoon</h1>
-        <p>Hello</p>
-        <img src="image.jpg" width="400" height="300">
-        <button onClick="button()">Button</button>
+        <header>
+            <h1>joseph yoon</h1>
+            <nav class="menu">
+                <li><a href="index.html">home</a></li>
+                <li><a href="">oil</a></li>
+            </nav>
+        </header>
+        <section>
+
+        </section>
+        
+        <main>
+            <p>hello, feel free to look around.</p>
+        </main>
+
+        <footer>
+            <a href="https://instagram.com/jsphyn/" target="_blank" rel="noopener noreferrer">ig</a>
+        </footer>
     </body>
 
     <script src="app.js"></script>
