--- a/index.html
+++ b/index.html
@@ -8,15 +8,54 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+                
         <link rel="stylesheet" href="css/main.css">
     </head>
 
     <body>
         <header>
-            <h1>joseph yoon</h1>
             <nav class="menu">
-                <li><a href="index.html">home</a></li>
-                <li><a href="">oil</a></li>
+                <ul id="UL1">
+                    <li><span class="caret">joseph yoon</span>
+                        <ul class="nested">
+                            <li><span class="caret">visual</span>
+                                <ul class="nested">
+                                    <li><span class="caret">oil</span>
+                                        <ul class="nested">
+                                            <li>2024</li>
+                                            <li>2023</li>
+                                        </ul>
+                                    </li>
+                                    <li>digital</li>
+                                </ul>
+                            </li>
+
+                            <li><span class="caret">design</span>
+                                <ul class="nested">
+                                    <li>poster</li>
+                                    <li>logo</li>
+                            </ul>
+                            </li>
+
+                            <li><span class="caret">audio</span>
+                                <ul class="nested">
+                                    <li>music</li>
+                                    <li>sfx</li>
+                            </ul>
+                            </li>
+
+                            <li><span class="caret">video</span>
+                                <ul class="nested">
+                                    <li>short film</li>
+                                    <li>misc.</li>
+                            </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </nav>
         </header>
         <section>
@@ -24,13 +63,15 @@
         </section>
         
         <main>
-            <p>hello, feel free to look around.</p>
+            <!--<p>hello, feel free to look around.</p>-->
         </main>
 
+        <!--
         <footer>
             <a href="https://instagram.com/jsphyn/" target="_blank" rel="noopener noreferrer">ig</a>
         </footer>
+        -->
     </body>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </html>
