--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
                 <ul id="UL1">
                     <li><span class="caret">joseph yoon</span>
                         <ul class="nested">
-                            <li><span class="caret">visual</span>
+                            <li><span class="caret">art</span>
                                 <ul class="nested">
                                     <li><span class="caret">oil</span>
                                         <ul class="nested">
-                                            <li>2024</li>
-                                            <li>2023</li>
+                                            <li><span class="select">2024</span>
+                                                <ul class="nested">
+                                                    <li><img src="image1.jpg" alt="painting 01"></li>
+                                                    <li><img src="image2.jpg" alt="painting 02"></li>
+                                                </ul>
+                                            </li>
+                                            
+                                            <li><span class="select">2023</span>
+                                                <ul class="nested">
+                                                    <li><img src="image3.jpg" alt="painting 03"></li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>digital</li>
@@ -40,17 +50,16 @@
                             </ul>
                             </li>
 
-                            <li><span class="caret">audio</span>
+                            <li><span class="caret">music</span>
                                 <ul class="nested">
                                     <li>music</li>
-                                    <li>sfx</li>
                             </ul>
                             </li>
 
                             <li><span class="caret">video</span>
                                 <ul class="nested">
                                     <li>short film</li>
-                                    <li>misc.</li>
+                                    <li>misc</li>
                             </ul>
                             </li>
                         </ul>
