doesn't work yet

--- a/index.html
+++ b/index.html
@@ -25,18 +25,8 @@
                                 <ul class="nested">
                                     <li><span class="caret">oil</span>
                                         <ul class="nested">
-                                            <li><span class="select">2024</span>
-                                                <ul class="nested">
-                                                    <li><img src="image1.jpg" alt="painting 01"></li>
-                                                    <li><img src="image2.jpg" alt="painting 02"></li>
-                                                </ul>
-                                            </li>
-                                            
-                                            <li><span class="select">2023</span>
-                                                <ul class="nested">
-                                                    <li><img src="image3.jpg" alt="painting 03"></li>
-                                                </ul>
-                                            </li>
+                                        <li><span class="click">2022</span></li>
+                                        <li><span class="click">2023</span></li>
                                         </ul>
                                     </li>
                                     <li>digital</li>
@@ -47,33 +37,49 @@
                                 <ul class="nested">
                                     <li>poster</li>
                                     <li>logo</li>
-                            </ul>
+                                </ul>
                             </li>
 
                             <li><span class="caret">music</span>
                                 <ul class="nested">
                                     <li>music</li>
-                            </ul>
+                                </ul>
                             </li>
 
                             <li><span class="caret">video</span>
                                 <ul class="nested">
                                     <li>short film</li>
                                     <li>misc</li>
-                            </ul>
+                                </ul>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </nav>
-        </header>
-        <section>
+            <main class="content">
+                <ul class="nested">
+                    <div class="item">
+                        <p>image of a body - oil on canvas</p>
+                        <li><img id="image" src="1.jpg" alt="painting 01"></li>
+                        <p>self portrait - oil on panel</p>
+                        <li><img id="image" src="2.jpg" alt="painting 02"></li>
+                        <p>brother in warm light</p>
+                        <li><img id="image" src="3.jpg" alt="painting 03"></li>
+                    </div>
+                </ul>
 
-        </section>
-        
-        <main>
-            <!--<p>hello, feel free to look around.</p>-->
-        </main>
+                <ul class="nested">
+                    <div class="item">
+                        <p>image of a body - oil on canvas</p>
+                        <li><img id="image" src="1.jpg" alt="painting 01"></li>
+                        <p>self portrait - oil on panel</p>
+                        <li><img id="image" src="2.jpg" alt="painting 02"></li>
+                        <p>brother in warm light</p>
+                        <li><img id="image" src="3.jpg" alt="painting 03"></li>
+                    </div>
+                </ul>
+            </main>
+        </header>
 
         <!--
         <footer>
