--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>joseph yoon</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Sketch</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-                
-        <link rel="stylesheet" href="css/main.css">
-    </head>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <body>
-        
-    </body>
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/CCapture.all.min.js"></script>
+  </head>
 
-    <script src="script.js"></script>
+  <body>
+    <script src="sketch.js"></script>
+    <script src="particle.js"></script>
+    <script src="quadtree.js"></script>
+  </body>
 </html>
