--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>joseph yoon</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-    <script src="libraries/CCapture.all.min.js"></script>
   </head>
 
   <body>
-    <script src="sketch.js"></script>
-    <script src="particle.js"></script>
-    <script src="quadtree.js"></script>
+    <a href="particles/particles.html">particles</a>
+    <a href="eca/eca.html">eca</a>
+    <a href="dragoncurve/dragoncurve.html">dragon curve</a>
   </body>
 </html>
