--- a/dragoncurve/dragoncurve.html
+++ b/dragoncurve/dragoncurve.html
@@ -15,5 +15,6 @@
   <body>
     <a href="../index.html">back</a>
     <script src="dragoncurve.js"></script>
+    <a href="#" onclick="next()">iterate</a>
   </body>
 </html>
