--- a/gravity/gravity.html
+++ b/gravity/gravity.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>joseph yoon</title>
+    <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <a href="particles/particles.html">particles</a>
-    <a href="eca/eca.html">eca</a>
-    <a href="dragoncurve/dragoncurve.html">dragon curve</a>
-    <a href="gravity/gravity.html">n body problem</a>
+    <a href="../index.html">back</a>
+    <script src="sketch.js"></script>
+    <script src="body.js"></script>
   </body>
 </html>
