--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
 
   <body>
-    <a href="particles/particles.html">particles</a>
-    <a href="eca/eca.html">eca</a>
-    <a href="dragoncurve/dragoncurve.html">dragon curve</a>
-    <a href="gravity/gravity.html">n body problem</a>
+    <a href="particles/particles.html">particles</a><br>
+    <a href="eca/eca.html">eca</a><br>
+    <a href="dragoncurve/dragoncurve.html">dragon curve</a><br>
+    <a href="gravity/gravity.html">n body problem</a><br>
   </body>
 </html>
