--- a/about.html
+++ b/about.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>eca</title>
+    <title>about</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <a href="../index.html">back</a>
-    <script src="eca.js"></script>
+    <a href="index.html">home</a><br>
+    <h1>about</h1>
+    <p>joseph yoon is an artist and engineer based in philadephia.</p>
   </body>
 </html>
