--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   </head>
 
   <body>
-    <a href="particles/particles.html">particles</a><br>
-    <a href="eca/eca.html">eca</a><br>
-    <a href="dragoncurve/dragoncurve.html">dragon curve</a><br>
-    <a href="gravity/gravity.html">n body problem</a><br>
+    <a href="about.html">about</a><br>
   </body>
 </html>
