--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <a href="about.html">about</a><br>
+    <div id="navbar"></div>
+    <script>
+      fetch("navbar.html")
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById("navbar").innerHTML = data;
+        })
+        .catch(error => console.error("Error loading navbar:", error));
+    </script>
+    <h1>home</h1>
+    <p>welcome.</p>
   </body>
 </html>
