--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>about</title>
+    <title>projects</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
@@ -19,8 +19,8 @@
           })
           .catch(error => console.error("Error loading navbar:", error));
       </script>
-
-    <h1>about</h1>
-    <p>joseph yoon is an artist and engineer based in philadephia.</p>
+    
+    <h1>projects</h1>
+    <p>project description.</p>
   </body>
 </html>
