--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body>
   <h1>윤성훈</h1>
+  <h2>joseph yoon</h2>
   <div id="navbar"></div>
   <script>
     fetch("navbar.html")
@@ -31,7 +32,7 @@
       })
       .catch(error => console.error("Error loading navbar:", error));
   </script>
-  <h2>home</h2>
+  <h3>home</h3>
   <p>welcome.</p>
 </body>
 
