--- a/navbar.html
+++ b/navbar.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <nav>
     <ul>
       <li><a href="index.html">home</a></li>
-      <li><a href="pages/about.html">about</a></li>
-      <li><a href="pages/projects.html">projects</a></li>
-      <li><a href="pages/blog.html">blog</a></li>
+      <li><a href="about.html">about</a></li>
+      <li><a href="projects.html">projects</a></li>
+      <li><a href="blog.html">blog</a></li>
     </ul>
 </nav>
