--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>joseph yoon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p>hello</p>
+    <div class="svg-bg"></div>
+    <p>a</p>
 </body>
+
 </html>
